<resources>
    <string name="app_name">Найди свое кино</string>
    <string name="mortal_combat">Мортал Комбат</string>
    <string name="details">Подробно</string>
    <string name="likeIt">Нравится</string>
    <string name="inviteFriend">Пригласить друга</string>
    <string name="backText">Назад</string>
    <string name="leaveComment">Оставь свой комментарий</string>
    <string name="chaos_walking">Поступь хаоса</string>
    <string name="wolf100">100% Волк</string>
    <string name="favorites">Избранное</string>
    <string name="movies">Фильмы</string>
    <string name="home">Главная</string>
    <string name="reload">Повторить</string>
</resources>
