<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="16dp"
        android:scrollbars="none"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/coverImg1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:paddingBottom="5dp"
                android:src="@drawable/mortal_combat"
                />

            <TextView
                android:id="@+id/titleTxtView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mortal_combat"
                android:textSize="28sp"/>

            <Button
                android:id="@+id/detailsBtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:layout_marginBottom="20dp"
                android:drawableEnd="@drawable/ic_chevron_right_purple_24dp"/>

            <ImageView
                android:id="@+id/coverImg2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/chaos_walking" />

            <TextView
                android:id="@+id/titleTxtView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chaos_walking"
                android:textSize="28sp"/>

            <Button
                android:id="@+id/detailsBtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:layout_marginBottom="20dp"
                android:drawableEnd="@drawable/ic_chevron_right_purple_24dp"/>

            <ImageView
                android:id="@+id/coverImg3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/wolf" />
            <TextView
                android:id="@+id/titleTxtView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wolf100"
                android:textSize="28sp"/>

            <Button
                android:id="@+id/detailsBtn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:layout_marginBottom="20dp"
                android:drawableEnd="@drawable/ic_chevron_right_purple_24dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom|center_horizontal"
                android:textSize="18sp"
                android:text="2021 Copyrights" />
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>